package com.karaoke.backend.domain;

public enum OrderStatus {
    PENDING,
    PREPARING,
    SERVED,
    CANCELLED
}
