package com.karaoke.backend.domain;

public enum RoomStatus {
    AVAILABLE,
    OCCUPIED,
    RESERVED,
    CLEANING,
    MAINTENANCE
}
