package com.karaoke.backend.domain;

public enum UserRole {
    CLIENT,
    RECEPTIONIST,
    SERVICE_STAFF,
    BRANCH_MANAGER,
    ADMIN
}
